--- a/работа/css/style.css
+++ b/работа/css/style.css
@@ -42,58 +42,54 @@ p{
 	font-size: 15px;
 	font-weight: 700;
 }
-.element{
-	width: 100%;
-}
 .products {
-	max-width: 100%;
-	padding-left: 75px;
+	width: 100%;
+	padding-left: 65px;
 	padding-top: 60px;
-	height: 950px;
+	height: 850px;
 	background: url('../img/bg/Brick-Background.png') no-repeat  center;
 }
 .product{
-	display: inline-block;
 	background-color: #fff;
-	padding-bottom: 10px;
-	padding: 0px 25px 5px 25px;
 	margin-top: 20px;
 	margin-left: 25px;
 	cursor: pointer;
 }
+
 .hover-buttons{
 	opacity: 0;
 	height: 0;	
 }
+.product:hover{
+	transition: 0.2s;
+}
 .product:hover .hover-buttons{
 	display:flex;
 	opacity: 1;
-	height: 48px;
-	transition: 0.7s;
+	height: 80px;
+	transition: 0.5s;
 }
 .product:hover .product-name{
 	color: #ea6d46;
 }
-
-
 .laminat-product{
-	padding-bottom: 7px;
+	padding-bottom: 2px;
 }
 .picture{
 	position: relative;
-	top: -15px;
+	top: -14.5px;
 	display: block;
 	margin: 0 auto;
+	max-width: 85%;
 	background-color: #fff;
 	border: 1px solid #e8e8e8;
-	margin-top: 0;
 	
 }
 
 .sale{
 	position: relative;
-	top: -15px;
-	left: -15px;
+	top: -13px;
+	left: 12px;
 	background-color: #fff;
 	width: 95px;
 	height: 40px;
@@ -105,8 +101,8 @@ p{
 .sales-treugolnik{
 	position: relative;
 	border: 15px solid transparent;	border-top: 0px solid #ea6d46; border-right: 15px solid #ea6d46;
-	top: 9.2px;
-	left: -72.5px;
+	top: 10px;
+	left: -70px;
 }
 .products-slider{
 	margin-top: 50px;
@@ -117,27 +113,27 @@ p{
 }
 
 .prev{
-	top: 510px;
-	left: 43%;
+	top: 525px;
+	left: 44%;
 	position: absolute;
 	z-index: 99;
 	width: 70px;
 	height: 70px;
 	border: none;
-	background: url(../img/NextPage.svg) center no-repeat;
+	background: url(../img/prevArrow.svg) center no-repeat;
 	background-size: 100%;
 	cursor: pointer;
 
 }
 .next{
-	top: 510px;
+	top: 525px;
 	left: 53%;
 	position: absolute;
 	z-index: 99;
 	width: 70px;
 	height: 70px;
 	border: none;
-	background: url(../img/NextPage2.svg) center no-repeat;
+	background: url(../img/nextArrow.svg) center no-repeat;
 	background-size: 100%;
 	cursor: pointer;
 	
@@ -154,13 +150,6 @@ p{
 .prev:hover{
 	opacity: 0.6;
 }
-.counter{
-	color: #fff;
-	font-family: 'Myriad Pro Light';
-	position: absolute;
-	top: 705px;
-	left: 48.7%;
-}
 .super-price{
 	color: #ea6d46;
 	margin: 0;
@@ -168,17 +157,17 @@ p{
 
 
 .product-name{
-	height: 16px;
-	margin-left: 3px;
+	height: 55px;
+	font-size: 16px;
+	margin-left: 25px;
 	margin-top: 0px;
 	margin-bottom: 10px;
 	line-height: 18px;
-
 }
 .product-price{
 	display: flex;
-	margin-left: 5px;
-	margin-top: 55px;
+	margin-left: 25px;
+	margin-top: 5px;
 	height: 30px;
 }
 
@@ -186,7 +175,7 @@ p{
 	font-weight: 500;
 	font-size: 11px;
 	color: #9a9a9a;
-	margin-top: 5px;
+	margin-top: 5px
 	margin-bottom: 0;
 }
 .code-product-laminat{
@@ -195,16 +184,16 @@ p{
 	color: #9a9a9a;
 	margin-top: 5px;
 	margin-bottom: 0;
-	width: 90px;
+	width: 50%;
 }
 
 .prices{
-    margin-bottom: 5px;
-	margin-left: 50px;
+	margin-left: 100px;
 }
 .prices-laminat{
-	margin-bottom: 5px;
-	margin-left: 25px;
+	
+	width: 100%;
+	margin-left: 15%;
 }
 
 .prices-laminat span{
@@ -212,7 +201,7 @@ p{
 	color: #c6c6c6;
 	font-size: 12px;
 	font-weight: 400;
-	margin-left: 10px;
+	margin-left: 5px;
 }
 .prices span{
 	text-decoration: line-through;
@@ -232,7 +221,7 @@ p{
 	height: 18px;
 	padding: 1px 4px 0 4px;
 	margin-bottom: 0;
-	margin-left: 5px;
+	margin-left: 25px;
 	font-weight: 700;
 	text-decoration: none;
 	box-shadow: 0.5px 0.5px rgba(255,255,100, -6);
@@ -251,18 +240,14 @@ p{
 	font-weight: 500;
 	color: #646368;
 }
- p.big-summ{
-	margin-left: 115px;
-}
 .type {
-	margin-left: 105px;
+	margin-left: 155px;
 	margin-bottom: 0;
 	font-size: 11px;
 	font-weight: 500;
 	color: #646368;
 }
 sup{
-	position: relative;
 	top: -10px;
 	left: -22px;
 	color: #9a9a9a;
@@ -274,15 +259,21 @@ sub{
 }
 .hover-buttons{
 	display: flex;
-	margin-top: 30px;
+	margin-top: 15px;
+	margin-left: 10%;
 }
 .buy-button{
+	margin-top: 15px;
 	margin-right: 30px;
 	margin-left: 25px;
 	padding: 12px 22px;
 	border-radius: 50px;
 	background-color: #f5521e;
+	height: 50px;
 	width: 130px;
+}
+.liked{
+	margin-top: 15px;
 }
 .buy-button:hover{
 	filter: brightness(85%);
@@ -295,23 +286,22 @@ sub{
 }
 .buy-button img{
 	float: right;
-	margin-left: 10px;
+	margin-left: 0px;
 	
 }
 
 
-/*@media screen and (max-width: 1440px){
+@media screen and (max-width: 1780px){
 .sale{
 	position: relative;
-	top: -15px;
-	left: 9px;
+	top: -14px;
+	left: 15px;
 	background-color: #fff;
 	width: 95px;
 	height: 40px;
 	padding: 4px 5px 2px 3px;
 	border: 3px solid #ea6d46;
 	box-shadow: 5px ;
-
 }
 .sales-treugolnik{
 	position: relative;
@@ -319,15 +309,286 @@ sub{
 	top: 9px;
 	left: -74px;
 }
+.picture{
+ width: 100%;
+}
 .product-name{
-	font-size: 14px;
+	margin-left: 30px;
+	margin-top: 0px;
+	margin-bottom: 10px;
+	line-height: 18px;
+}
+.product-price{
+	margin-left: 30px;
+}
+.prices{
+    margin-bottom: 5px;
+	margin-left: 130px;
+}
+.prices-laminat{
+	margin-bottom: 5px;
+	margin-left: 30%;
+}
+.avaible {
+	margin-left: 27px;
+}
+.type{
+	margin-left: 185px;
 }
 }
-@media screen and (max-width: 1073px){
-.product .slick-current{
-	width: 300px;
+@media screen and (max-width: 1565px){
+	.sale{
+	top: -14px;
+	left: 10px;
 }
-}*/
+.prices{
+	margin-left: 100px;
+}
+.prices-laminat{
+	margin-left: 20%;
+}
+.type{
+	margin-left: 155px;
+}
+}
+@media screen and (max-width: 1485px){
+	.product-name{
+		font-size: 14px;
+	}
+	.prices{
+	margin-left: 25%;
+}
+	.prices-laminat{
+	margin-left: 15%;
+}
+.type{
+	margin-left: 125px;
+}
+.hover-buttons{
+	margin-left: 5%;
+}
+}
+@media screen and (max-width: 1341px){
+	.prices-laminat{
+	margin-left: 10%;
+}
+.hover-buttons{
+	margin-left: 0;
+}
+}
+@media screen and (max-width: 1299px){
+	.sale{
+	top: -14px;
+	left: 12px;
+}
+	.prices{
+	margin-left: 25%;
+}
+	.prices-laminat{
+	margin-left: 15%;
+}
+	.type{
+	margin-left: 40%;
+}
+.prev{
+	left: 40%;
+}
+.next{
+	left: 55%;	
+}
+.hover-buttons{
+	margin-left: 8%;
+}
 
+}
+@media screen and (max-width: 1048px){
+		.prices{
+	margin-left: 15%;
+}
+	.prices-laminat{
+	margin-left: 5%;
+}
+	.type{
+	margin-left: 35%;
+}
+.prev{
+	top: 470px;
+	left: 40%;
+}
+.next{
+	top: 470px;
+	left: 55%;	
+}
+.hover-buttons{
+	margin-left: 0;
+}
+}
+@media screen and (max-width: 991px){
+	.products{
+		padding-left: 70px;
+	}
+	.hover-buttons{
+	opacity: 1;
+	height: 80px;
+}
+	.sale{
+	top: -14px;
+	left: 16px;
+}
+	.prices{
+	margin-left: 40%;
+}
+	.prices-laminat{
+	margin-left: 30%;
+}
+	.type{
+	margin-left: 50%;
+}
+.prev{
+	top: 230px;
+	left: -8.5%;
+}
+.next{
+	top: 230px;
+	left: 102%;
+		
+}
+.hover-buttons{
+	margin-left: 12%;
+}
+}
+@media screen and (max-width: 856px){
+	.sale{
+	top: -14px;
+	left: 13px;
+}
+	.prices{
+	margin-left: 30%;
+}
+	.prices-laminat{
+	margin-left: 18%;
+}
+	.type{
+	margin-left: 47%;
+}
+.hover-buttons{
+	margin-left: 2%;
+}
+}
+@media screen and (max-width: 775px){
+	.prices-laminat{
+	margin-left: 16%;
+}
+}
+@media screen and (max-width: 767px){
+	.sale{
+	top: -14px;
+	left: 30px;
+}
+	.sales-treugolnik{
+	top: 11px;
+	left: -73px;
+}
+	.product-name{
+	margin-left: 40px;
+}
+.product-price{
+	margin-left: 40px;
+}
+.avaible {
+	margin-left: 40px;
+}
+.type{
+	margin-left: 185px;
+}
+.hover-buttons{
+	margin-left: 25%;
+}
+	.next{
+	visibility: hidden;
+	}
+	.prev{
+	visibility: hidden;
+	}
+	
+}
+@media screen and (max-width: 600px){
+	.sale{
+	left: 17px;
+}
+.hover-buttons{
+	margin-left: 15%;
+}
+}
+@media screen and (max-width: 494px){
+	.sale{
+	left: 10px;
+}
+	.prices{
+		margin-left: 20%;
+	}
+	.prices-laminat{
+		margin-left: 10%;
+	}
+	.type{
+		margin-left: 35%;
+	}
+	.hover-buttons{
+	margin-left: 5%;
+}
+}
+@media screen and (max-width: 460px){
+	.product-name{
+		margin-left: 20px;
+		font-size: 12px;
+	}
+	.product-price{
+		display: block;
+		text-align: center;
+		margin-bottom: 0px;
+	}
+	.code-product{
+		margin-right: 50px;
+		margin-bottom: 3px;
+	}
+	.code-product-laminat{
+		margin-left: 20px;
+		margin-bottom: 3px;
+	}
+	.prices{
+		margin-left: 0;
+		margin-right: 50px;
+	}
+	.prices-laminat{
+		margin: 0;
+		margin-left: -10%;
+		
+	}
+	.avaible-type{
+		display: block;
+		text-align: center;
+	}
+	.avaible{
+	margin-left: 0;
+
+	}
+	.type{
+		display: inline-block;
+		margin: 0 auto;
+		margin-left: 50px;
+		margin-top: 20px;
+	}
+	.buy-button{
+		font-size: 10px;
+		height: 40px;
+		margin-left: 15px;
+	}
+	img .liked{
+		height: 10px;
+	}
+	.hover-buttons{
+	margin-left: 0%;
+}
+}
 
 
